--- a/sv-components/src/my-app.html
+++ b/sv-components/src/my-app.html
@@ -9,4 +9,10 @@
     <sv-table datachannel="data" tabid="all" style="position:fixed;opacity:90%;z-index:1;"></sv-table>
     <sv-network tabid="visual" datachannel="data"></sv-network>
 </div-->
-<sv-table-network></sv-table-network>
+<sv-table-network>
+    <div style="width:400px" class="w3-card w3-margin w3-padding">
+    <p><b>Demo</b> representing knowledge graphs as network of nodes and edges.</p>
+    <p>Nodes, edges or N&E can be edited to se instant visual change. Visible nodes can be filtered using dialog 'filter' above.</p>
+    </div>
+</sv-table-network>
+
